[gd_scene load_steps=5 format=2]

[ext_resource path="res://Overworld/Objects/Caixa_no_mundo.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesets/Slates[Ivan_Voirol].png" type="Texture" id=2]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.4354, 22.8783 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.4086, 10 )

[node name="Caixa_no_mundo" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.18471, -3.34132 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 320, 288, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 1 )

[node name="Áreas" type="Node2D" parent="."]
scale = Vector2( 0.2, 0.2 )

[node name="Down" type="Area2D" parent="Áreas"]
position = Vector2( -17.7745, 26.7869 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Áreas/Down"]
position = Vector2( 18.7745, 2.2531 )
shape = SubResource( 2 )

[node name="Up" type="Area2D" parent="Áreas"]
position = Vector2( -17.774, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Áreas/Up"]
position = Vector2( 18.7745, 2.2531 )
shape = SubResource( 2 )

[node name="Left" type="Area2D" parent="Áreas"]
position = Vector2( -32, -20 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Áreas/Left"]
position = Vector2( 18.7745, 2.2531 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="Áreas"]
position = Vector2( 36, -20 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Áreas/Right"]
position = Vector2( 18.7745, 2.2531 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Áreas/Down" to="." method="_on_Down_area_entered"]
[connection signal="area_exited" from="Áreas/Down" to="." method="_on_Down_area_exited"]
[connection signal="area_entered" from="Áreas/Up" to="." method="_on_Up_area_entered"]
[connection signal="area_exited" from="Áreas/Up" to="." method="_on_Up_area_exited"]
[connection signal="area_entered" from="Áreas/Left" to="." method="_on_Left_area_entered"]
[connection signal="area_exited" from="Áreas/Left" to="." method="_on_Left_area_exited"]
[connection signal="area_entered" from="Áreas/Right" to="." method="_on_Right_area_entered"]
[connection signal="area_exited" from="Áreas/Right" to="." method="_on_Right_area_exited"]
